tests/fixtures/invalid/float_rshift_int.py
# Cannot right shift Float
x: float = 1.0 >> 1
